# opentrons-fleet-manager

./: .gitignore  package-lock.json  package.json  readme.md
.github/workflows/: release.yml
Alex_Observability/: .gitignore
Alex_Observability/Observability_V0/: .env.example  .gitignore  Makefile  README.md  index.html  package-lock.json  package.json  skills.md  vite.config.ts
Alex_Observability/Observability_V0/agent/: agent_config.example.json  pyproject.toml  requirements.txt  run_agent.py
Alex_Observability/Observability_V0/agent/observability_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
Alex_Observability/Observability_V0/backend/: agent_auth.py  alembic.ini  auth.py  db.py  demo_api.py  models.py  note_compliance.py  requirements-abr.txt  requirements.txt  skills.md  (+1 more)
Alex_Observability/ram_tracker/: .gitignore  Makefile  README.md  ram_tracker.py  requirements.txt  skills.md
Alex_Observability/video_replay/: .gitignore  AI_VIDEO_ANALYSIS_FLOW.md  Makefile  README.md  _test_slack.py  ai_analysis.py  config.example.ini  config.example.yaml  monitor.py  ram_tracker.py  read_robot_logs.py  requirements.txt  skills.md  slack_error_analyzer_api.py
functions/: addDemoRobot.ts  fetchDemoRobotHardware.ts  fetchDemoRobotInfo.ts  fetchDemoRunHistory.ts  fetchRobotHardware.ts  fetchRobotInfo.ts  fetchRunDetails.ts  fetchRunHistory.ts  generateErrorReport.ts  generateTroubleshootingReport.ts  generateTroubleshootingZip.ts
src/: pages.config.js
src/pages/: FleetOperation.jsx  Instructions.jsx  RobotDetails.jsx
(+73 files in other folders)
