[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "observability-agent"
version = "0.0.0-dev"
description = "Opentrons observability relay agent"
requires-python = ">=3.10"
dependencies = ["httpx>=0.27.0"]

[project.scripts]
observability-agent = "run_agent:main"

[tool.setuptools]
py-modules = ["run_agent"]
